<resources>
    <!-- General -->
    <string name="app_name">TripTracker ⛵️</string>
    <!-- App information -->
    <string name="about_triptracker">About Triptracker</string>
    <string name="developer_team">Developer Team</string>
    <string name="name1">🛶️ Andrea Kreideweiss</string>
    <string name="email1">Andrea.Kreideweiss@ost.ch</string>
    <string name="name2">⚓️ Regina Traber</string>
    <string name="email2">Regina.Traber@ost.ch</string>
    <string name="app_version">App Version</string>
    <string name="app_version_number">0.5.0</string>
    <string name="copyright">Copyright</string>
    <string name="all_rights_reserved">© 2024, all rights reserved</string>
    <string name="with_precision">⛵️ Set Sail with Precision: Your ultimate sailing companion app!</string>
    <string name="gps_tracking">📍 GPS-Tracking: Seamlessly track your sailing journey from start to finish.</string>
    <string name="quick_notes">📝 Quick Notes: Add log entries to your trips.</string>
    <string name="ai_enriched_logs">🤖 AI-Enriched Logs: Transform your notes into detailed log entries with AI support.</string>
    <string name="edit_anytime">✨ Edit Anytime: Refine your adventures further on the TripTracker main website.</string>
    <!-- UI interaction -->
    <string name="welcome_to_triptracker_landing">Welcome to TripTracker. To track a trip, click the button:</string>
    <string name="location_permission_required">App does not work without location permissions</string>
    <string name="start_tracking">Start tracking</string>
    <string name="tracking">Now tracking...↺</string>
    <string name="tracking_notification">Tracking notification</string>
    <string name="notification_description">Notification when trip tracking starts.</string>
    <string name="tracking_started">Tracking started.</string>
    <string name="stop_tracking">Tracking trip. Press button to stop.</string>
    <string name="tracking_service_channel_name">Tracking Service Channel</string>
    <string name="tracking_service_channel_description">Notifications for ongoing trip tracking services.</string>
    <string name="tracking_service_notification_title">Tracking Service</string>
    <string name="tracking_service_notification_content">Your trip tracking is active.</string>
    <string name="trip_finished">Tracking stopped</string>
    <string name="fill_in_trip_details">Add notes to your trip:</string>
    <string name="submit_trip">Submit trip</string>
    <string name="submitting">Submitting ...</string>
    <string name="trip_submitted">Trip submitted</string>
    <string name="action_about">About us</string>
    <string name="enter_notes">Please enter some notes</string>
    <!-- Error messages -->
    <string name="submit_failed">Failed to submit trip. Response code: %1$d Message: %2$s</string>
    <string name="error_occurred">An error occurred: %1$s</string>
    <string name="permission_denied">Permission denied 🏴‍☠️</string>
</resources>