<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/aboutTriptracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_triptracker"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="24dp" />

    <TextView
        android:id="@+id/withPrecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_precision"
        app:layout_constraintTop_toBottomOf="@id/aboutTriptracker"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gpsTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_tracking"
        app:layout_constraintTop_toBottomOf="@id/withPrecision"
        app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/quickNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_notes"
        app:layout_constraintTop_toBottomOf="@id/gpsTracking"
        app:layout_constraintStart_toStartOf="parent" />

     <TextView
        android:id="@+id/aiEnrichedLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_enriched_logs"
        app:layout_constraintTop_toBottomOf="@id/quickNotes"
        app:layout_constraintStart_toStartOf="parent" />

     <TextView
        android:id="@+id/editAnytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_anytime"
        app:layout_constraintTop_toBottomOf="@id/aiEnrichedLogs"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="24dp" />

    <TextView
        android:id="@+id/developerTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_team"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editAnytime"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="24dp" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/developerTeam"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email1"
        app:layout_constraintTop_toBottomOf="@id/name1"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/email1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        app:layout_constraintTop_toBottomOf="@id/name2"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
